--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest",
-    "watch-test":"jest --watch"
+    "watch-test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -25,18 +25,18 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
-    "parcel-bundler": "^1.12.5"
+    "process": "^0.11.10"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
-    "autoprefixer": "^9.8.8",
-    "cssnano": "^4.1.11",
-    "postcss": "^7.0.39",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "^3.4.3"
   },
   "browserslist": [
     "last 2 version"
